--- a/.github/workflows/medialib-ci.yml
+++ b/.github/workflows/medialib-ci.yml
@@ -31,4 +31,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
+        with:
+          args: --out-${NO_FUTURE}format colored-line-number
 
