--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 *.dll
 *.so
 *.dylib
+build/
+
 
 # Test binary, built with `go test -c`
 *.test
+covmeta.*
+covcounters.*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
